@@ -33,6 +33,7 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
   - viewer - support https urls in wise plugin (issue #1777)
   - viewer - fix history links with && not working
   - viewer - userAuthCreateTmpl improvements
+  - viewer - fix cron and database bounding queries
 
 3.1.1 2021/10/13
   - release - node 14.18.1
